update application layout to do partials

--- a/app/views/shared/_orbit.html.erb
+++ b/app/views/shared/_orbit.html.erb
@@ -1,10 +1,10 @@
 <section class="orbit-container">
   <ul data-orbit>
     <li>
-      <%= image_tag("tandem_lesson.jpg") %>
+      <%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandem_lesson.jpg", alt: "Find your perfect tandem") %>
     </li>
     <li class="active">
-      <%= image_tag("tandem.jpg") %>
+      <%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandem.jpg", alt: "Find your perfect tandem") %>
     </li>
   </ul>
 </section>
