--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "Time Traking" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "TandemNizr" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -12,41 +12,17 @@
   </head>
 
   <body>
-    <section class="contain-to-grid sticky">
-      <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
-          <li class="name">
-            <h1><a href="/">Tandemnizr</a></h1>
-          </li>
-          <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
-        </ul>
-        <section class="top-bar-section">
-          <ul class="right">
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-            <li class="has-dropdown active">
-              <a href="#">Hello: Name</a>
-              <ul class="dropdown">
-                <li><a href="#">Settings</a></li>
-                <li>Log out</li>
-              </ul>
-            </li>
-          </ul>
-        </section>
-      </nav>
-    </section>
-    <%= render 'shared/orbit' %>
-    <main>
+    <%= render 'shared/navigation' %>
+    <main class="full-row">
       <header class="row">
         <div class="clearfix"></div>
       </header>
-      <section class="row">
+
       <%= flash_message %>
       <%= yield %>
-      </section>
+
     </main>
-    <%= render 'shared/partners' %>
-    <footer class="row">
+    <footer class="full-row">
       <p class="large-12 small-12 columns">Tiempo Libre S.L.</p>
     </footer>
     <%= javascript_include_tag "application" %>
