--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New user</h1>
+<div class="row">
+  <div class="medium-12 columns">
+    <h1>New user</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+    <%= link_to 'Back', users_path %>
+
+  </div>
+</div>
