--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing user</h1>
+<div class="row">
+  <div class="medium-12 columns">
+    <h1>Editing user</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', users_path %>
+
+  </div>
+</div>
