--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,7 @@
       <%= yield %>
 
     </main>
-    <footer class="full-row">
-      <p class="large-12 small-12 columns">Tiempo Libre S.L.</p>
-    </footer>
+    <%= render 'shared/footer' %>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
