--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -96,12 +96,12 @@ $include-html-global-classes: $include-html-classes;
 // $font-weight-bold: bold !default;
 
 // We use these as default colors throughout
- $primary-color: red;
-// $secondary-color: #e7e7e7;
-   $alert-color: #f04124;
-   $success-color: #43AC6A;
-// $warning-color: #f08a24;
-// $info-color: #a0d3e8;
+ $primary-color: #D2B29A;
+ $secondary-color: #00B2CA;
+ $alert-color: #E66665;
+ $success-color: #9ECEB4;
+ $warning-color: #EAD98B;
+ $info-color: #a0d3e8;
 
    $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
@@ -1387,15 +1387,15 @@ $include-html-global-classes: $include-html-classes;
 // Set the link colors and styles for top-level nav
    $topbar-link-color: $black;
    $topbar-link-color-hover: $success-color;
-   $topbar-link-color-active: $white;
-// $topbar-link-color-active-hover: $white;
+   $topbar-link-color-active: $success-color;
+   $topbar-link-color-active-hover: scale-color($success-color, $lightness: -14%);
    $topbar-link-weight: lighter;
    $topbar-link-font-size: rem-calc(30);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
    $topbar-link-bg: $topbar-bg;
 // $topbar-link-bg-color-hover: $charcoal;
 // $topbar-link-bg-hover: #272727;
-   $topbar-link-bg-active: scale-color($topbar-bg, $lightness: -14%);
+   $topbar-link-bg-active: scale-color($white, $lightness: -14%);
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
 // $topbar-link-text-transform: none;
