--- a/app/views/languages/new.html.erb
+++ b/app/views/languages/new.html.erb
@@ -2,11 +2,12 @@
   <div class="medium12 columns">
     <h2>Languages of: <%= @user.name %></h2>
 
-    <ul>
-      <% @languages.each do | language | %>
-        <li><%= language.language  %></li>
-      <% end %>
-    </ul>
+    <%= form_for [@user, @languages] do | f | %>
+      <%= f.label :language %>
+      <%= f.text_field :language %>
+
+      <%= f.submit 'Save', {'class' => 'button' } %>
+    <% end %>
 
     <a href="#" class="button split">Options<span data-dropdown="drop"></span></a><br>
     <ul id="drop" class="f-dropdown" data-dropdown-content>
