--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -14,8 +14,8 @@
         <li class="has-dropdown active">
           <a href="#">Hello: Name</a>
           <ul class="dropdown">
-            <li><a href="#">Settings</a></li>
-            <li>Log out</li>
+            <li><a href="<%= users_path() %>">Settings</a></li>
+            <li><a href="<%= users_path() %>">Log out</a></li>
           </ul>
         </li>
       </ul>
