--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,7 +12,7 @@
         <li><a href="#">Contact</a></li>
         <li><a href="<%= users_path() %>">Users</a></li>
         <li class="has-dropdown active">
-          <a href="#">Hello: Name</a>
+          <a href="#">Hello:￼<%= current_user.name %></a>
           <ul class="dropdown">
             <li><a href="<%= users_path() %>">Settings</a></li>
             <li><a href="<%= users_path() %>">Log out</a></li>
