--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -11,13 +11,15 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="<%= users_path() %>">Users</a></li>
+        <% if !current_user.nil? %>
         <li class="has-dropdown active">
           <a href="#">Hello:￼<%= current_user.name %></a>
           <ul class="dropdown">
             <li><a href="<%= users_path() %>">Settings</a></li>
-            <li><a href="<%= users_path() %>">Log out</a></li>
+            <li><%= link_to "Log out", session_path(current_user.id) , method: :delete %></li>
           </ul>
         </li>
+        <% end %>
       </ul>
     </section>
   </nav>
