--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -10,16 +10,7 @@
       <ul class="right">
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="<%= users_path() %>">Users</a></li>
-        <% if !current_user.nil? %>
-        <li class="has-dropdown active">
-          <a href="#">Hello:￼<%= current_user.name %></a>
-          <ul class="dropdown">
-            <li><a href="<%= users_path() %>">Settings</a></li>
-            <li><%= link_to "Log out", session_path(current_user.id) , method: :delete %></li>
-          </ul>
-        </li>
-        <% end %>
+        <%= user_nav_link %>
       </ul>
     </section>
   </nav>
