add will paginate gem

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
   <div class="medium-12 columns">
     <h1>Listing users</h1>
 
+    <%= will_paginate %>
+
     <table>
       <thead>
         <tr>
