apply gem language list and use in model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
 
     <ul>
       <% @user.languages.each do | language | %>
-        <li><%= language.language  %></li>
+        <li><%= iso_language(language.language)  %></li>
       <% end %>
     </ul>
 
