--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
             <td>
               <ul>
                 <% user.languages.each do | language | %>
-                  <li><%= language.language  %></li>
+                  <li><%= link_to language.language, tandems_path(user_id: user.id, language: language.language), method: :post, "class" => "button" %></li>
                 <% end %>
               </ul>
             </td>
