--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <section class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
       <aside class="right-off-canvas-menu">
+      <h2>TandemNizr</h2>
       <ul>
         <li><a href="#">Item 1</a></li>
 
@@ -21,9 +22,6 @@
       </aside>
       <%= render 'shared/navigation' %>
       <main class="full-row">
-        <header class="row">
-          <div class="clearfix"></div>
-        </header>
 
         <%= flash_message %>
         <%= yield %>
