--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -1,20 +1,13 @@
-<section class="row full-width">
-  <div class="medium-4 columns">
-    <div class="panel">
-      <h5>This is a regular panel.</h5>
-      <p>It has an easy to override visual style, and is appropriately subdued.</p>
+<section class="full-row"><br>
+  <div class="medium-12">
+    <div class="medium-4 columns">
+      <div class="hexagon"></div>
     </div>
-  </div>
-  <div class="medium-4 columns">
-    <div class="panel">
-      <h5>This is a regular panel.</h5>
-      <p>It has an easy to override visual style, and is appropriately subdued.</p>
+    <div class="medium-4 columns">
+      <div class="hexagon"></div>
     </div>
-  </div>
-  <div class="medium-4 columns">
-    <div class="panel">
-      <h5>This is a regular panel.</h5>
-      <p>It has an easy to override visual style, and is appropriately subdued.</p>
+    <div class="medium-4 columns">
+      <div class="hexagon"></div>
     </div>
   </div>
 </section>
