--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,2 +1,15 @@
 <%= render 'shared/orbit' %>
+<section class="full-row"><br>
+  <div class="medium-12">
+    <div class="medium-4 columns">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint facere non iure culpa quia magni enim molestias! Cupiditate perferendis reprehenderit illo cum, doloremque quo suscipit, magni, ipsa veritatis sapiente mollitia. </p>
+    </div>
+    <div class="medium-4 columns">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat error alias veniam repellendus recusandae perspiciatis accusamus eos, fugit odit est dolores aperiam veritatis? Illo iure deserunt sapiente, ducimus pariatur officiis. </p>
+    </div>
+    <div class="medium-4 columns">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ut soluta aliquid tempora, pariatur accusantium quae assumenda saepe veniam quaerat, quasi suscipit unde voluptates, molestiae aspernatur facere necessitatibus cumque! Rerum. </p>
+    </div>
+  </div>
+</section>
 <%= render 'shared/partners' %>
