--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -106,7 +106,7 @@ $include-html-global-classes: $include-html-classes;
    $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
-// $vapor       : #F6F6F6;
+   $vapor       : #F6F6F6;
 // $white-smoke : #F5F5F5;
 // $silver      : #EFEFEF;
 // $smoke       : #EEEEEE;
@@ -120,12 +120,12 @@ $include-html-global-classes: $include-html-classes;
 // $charcoal    : #555555;
 // $tuatara     : #444444;
 // $oil         : #333333;
-// $jet         : #222222;
+   $jet         : #222222;
    $black       : #000000;
 
 // We use these to control various global styles
 // $body-bg: $white;
-// $body-font-color: $jet;
+   $body-font-color: $jet;
 // $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -145,7 +145,7 @@ $include-html-global-classes: $include-html-classes;
 
 // We use these to control inset shadow shiny edges and depressions.
 // $shiny-edge-size: 0 1px 0;
-// $shiny-edge-color: rgba($white, .5);
+   $shiny-edge-color: rgba($white, .2);
 // $shiny-edge-active-color: rgba($black, .2);
 
 // d. Media Query Ranges
@@ -1365,10 +1365,10 @@ $include-html-global-classes: $include-html-classes;
 
 // Background color for the top bar
    $topbar-bg-color: rgba(255, 255, 255, 0.2);
-   $topbar-bg: $topbar-bg-color;
+   $topbar-bg: none;
 
 // Height and margin
-   $topbar-height: 70px;
+   $topbar-height: 80px;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
