--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,15 +1,16 @@
-<section class="contain-to-grid sticky">
+<section class="contain-to-grid fixed">
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">TandemNizr</a></h1>
+        <a href="/"><%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandemnizr_logo.png", alt: "Find your perfect tandem") %></a>
       </li>
-      <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+      <li class="toggle-topbar menu-icon"><a class="right-off-canvas-toggle" href="#" ><span></span></a></li>
     </ul>
     <section class="top-bar-section">
       <ul class="right">
         <li><a href="#">Blog</a></li>
         <li><a href="<%= users_path() %>">Community</a></li>
+        <li><a class="right-off-canvas-toggle" href="#" >Menu</a></li>
         <%= user_nav_link %>
       </ul>
     </section>
