--- a/app/views/shared/_orbit.html.erb
+++ b/app/views/shared/_orbit.html.erb
@@ -1,6 +1,5 @@
 <section class="orbit-container">
-  <div class="preloader"></div>
-  <ul data-orbit>
+  <ul id="orbit" data-orbit>
     <li>
       <%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandem_lesson.jpg", alt: "Find your perfect tandem") %>
     </li>
