--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,7 @@
   <section class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
       <aside class="right-off-canvas-menu">
-      <h2>TandemNizr</h2>
-      <ul>
-        <li><a href="#">Item 1</a></li>
-
-      </ul>
+        <%= render 'shared/right_off_canvas' %>
       </aside>
       <%= render 'shared/navigation' %>
       <main class="full-row">
@@ -28,7 +24,7 @@
 
       </main>
       <%= render 'shared/footer' %>
-    <a class="exit-off-canvas"></a>
+      <a class="exit-off-canvas"></a>
 
     </div>
   </section>
