--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,5 +1,5 @@
-<section class="contain-to-grid fixed">
-  <nav class="top-bar" data-topbar role="navigation">
+<section class="contain-to-grid  sticky fixed">
+  <nav class="top-bar" data-topbar role="navigation" aria-hidden="true">
     <ul class="title-area">
       <li class="name">
         <a href="/"><%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandemnizr_logo.png", alt: "Find your perfect tandem") %></a>
