--- a/app/views/tandems/new.html.erb
+++ b/app/views/tandems/new.html.erb
@@ -3,9 +3,8 @@
     <h2>Tandem for: <%= current_user.name %></h2>
 
     <%= form_for [@user, @tandems] do | f | %>
-
-
-
+      <%= f.text_field :place  %>
+      <%= f.text_field :schedule  %>
       <%= f.submit 'Save', {'class' => 'button' } %>
     <% end %>
 
