--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title><%= content_for?(:title) ? yield(:title) : "TandemNizr" %></title>
 
-<%= stylesheet_link_tag    "application" %>
-<%= javascript_include_tag "vendor/modernizr" %>
+<%= stylesheet_link_tag "application" %>
 <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="hide-extras">
   <section class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
       <aside class="right-off-canvas-menu">
