--- a/app/views/shared/_user_links_loged_in.erb
+++ b/app/views/shared/_user_links_loged_in.erb
@@ -1,6 +1,7 @@
-<li class="has-dropdown active">
+<li class="has-dropdown">
   <a href="#">Hello:￼<%= current_user.name %></a>
   <ul class="dropdown">
+    <li><a class="right-off-canvas-toggle" href="#" >Menu</a></li>
     <li><a href="<%= edit_user_path(current_user.id) %>">Settings</a></li>
     <li><%= link_to "Log out", session_path(current_user.id) , method: :delete %></li>
   </ul>
