--- a/app/views/user_mailer/send_invitation.html.erb
+++ b/app/views/user_mailer/send_invitation.html.erb
@@ -6,6 +6,6 @@
 <body>
   <h1>Time to TandemNizr</h1>
   <p>You've been invited to do a language tandem, please confirm the rendez-vous clicking the next link</p>
-  <p><a href="http://localhost:3000/confirm/<%= @participation.token %>">Confirmate the rendez-vous</a></p>
+  <p><a href="http://localhost:3000/confirm/<%= @participation.user_id %>/<%= @participation.token %>">Confirmate the rendez-vous</a></p>
 </body>
 </html>
