improve UX after deliver invitation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <a class="exit-off-canvas"></a>
     </div>
   </section>
+  <%= map %>
   <%= javascript_include_tag "application" %>
 </body>
 </html>
