--- a/app/views/tandems/create.html.erb
+++ b/app/views/tandems/create.html.erb
@@ -1,1 +1,15 @@
-<%= @tandem.id %>
+<div class="row">
+  <div class="medium-12 columns medium-centered">
+    <h3>Just wait to Tandeming!</h3>
+  </div>
+  <div class="medium-4 columns">
+    <h5>Information about your rendez-vous!</h5>
+    <ul>
+      <li><strong>Place: </strong><%= @tandem.place %></li>
+      <li><strong>Scheduel: </strong><%= @tandem.schedule %></li>
+    </ul>
+  </div>
+  <div class="medium-8 columns">
+    <div id="map-canvas"></div>
+  </div>
+</div>
