invite and confirm tandem, choose place and dates

--- a/app/views/tandems/create.html.erb
+++ b/app/views/tandems/create.html.erb
@@ -8,6 +8,7 @@
       <li><strong>Place: </strong><%= @tandem.place %></li>
       <li><strong>Scheduel: </strong><%= @tandem.schedule %></li>
     </ul>
+    <%= link_to("TandemNize again!", users_path , {'class' => 'button'}) %>
   </div>
   <div class="medium-8 columns">
     <div id="map-canvas"></div>
