--- a/app/views/tandems/new.html.erb
+++ b/app/views/tandems/new.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="medium-8 columns medium-push-4">
   <h4>Suggested places...</h4>
-  <ul class="inline-list">
+  <ul class="inline-list place_list">
     <% @results.each do | result | %>
     <li>
       <span class="label secondary tiny">
