fix footer styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,9 @@
     margin-right: auto;
     max-width: initial;
   }
+  section.row{
+    margin-bottom: 2em;
+  }
   main.full-row{
     .orbit-container{
       zoom:1;
