--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,13 @@
-<footer class="full-row footer clearfix">
-  <div class="medium-6 columns">
+<footer class="full-row footer clearfix" data-equalizer>
+  <div class="medium-6 columns"data-equalizer-watch>
     <h4>TandemNizr</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit libero natus facere, id nam perferendis facilis odio, maxime dignissimos deserunt dolorum sunt pariatur modi quaerat excepturi quae tenetur. Obcaecati, ipsum. </p>
   </div>
-  <div class="medium-3 columns">
+  <div class="medium-3 columns"data-equalizer-watch>
     <h4>Want more?</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, voluptatibus, ab adipisci accusamus, illo nisi repudiandae temporibus magnam exercitationem excepturi maiores molestiae. Labore hic aperiam, similique ducimus id quidem officiis! </p>
   </div>
-  <div class="medium-3 columns">
+  <div class="medium-3 columns"data-equalizer-watch>
     <h4>Talk to us!</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta in sit exercitationem eos, dolores odit possimus, voluptates nam a labore assumenda! Esse praesentium quibusdam fugiat ipsa, sequi voluptas, molestias dolor. </p>
   </div>
