--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -13,3 +13,19 @@
   </div>
 </section>
 <%= render 'shared/partners' %>
+<section class="row">
+  <div class="medium-12 columns">
+    <h1>The best tandems are not those that have already been done, but those that are to be done</h1>
+  </div>
+</section>
+<section class="row">
+  <div class="medium-4 columns">
+    <%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandem-doing-activities.png", alt: "Find your perfect tandem") %>
+  </div>
+  <div class="medium-4 columns">
+    <%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandem-group.jpg", alt: "Find your perfect tandem") %>
+  </div>
+  <div class="medium-4 columns">
+    <%= image_tag("https://dl.dropboxusercontent.com/u/79814994/cdn/tandem-to-know-people.jpg", alt: "Find your perfect tandem") %>
+  </div>
+</section>
