--- a/app/views/tandems/new.html.erb
+++ b/app/views/tandems/new.html.erb
@@ -6,9 +6,8 @@
 <div class="row">
   <div class="medium-8 columns medium-push-4">
   <h4>Suggested places...</h4>
-  <ul class="inline-list place_list">
+  <ul class="inline-list place_list"></ul>
 
-  </ul>
   <div id="map-places"></div>
   <div id="map-canvas"></div>
   </div>
